fix "commentary" padding on mobile

--- a/src/less/_roadconditions-public.less
+++ b/src/less/_roadconditions-public.less
@@ -41,14 +41,12 @@ ul {
     color: #ccc;
     font-size: .9em;
     margin-top: .4em;
-    padding-left: 100px;
     float: left;
 }
 
 .announcements {
     float: right;
     width: 71.5%;
-    padding-right: 10%;
 }
 
 .update {
@@ -262,14 +260,12 @@ ul {
     }
 
     .extra-weather-conditions {
-        padding-left: 2%;
+        padding-left: 2
     }
 
     .sidebar, .announcements {
         float: none;
-        width: 92%;
-        margin-left: 25px;
-        padding-right: 0;
+        width: 100%;
         padding-left: 0;
     }
 
